--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -5,6 +5,6 @@
 {
     "name": "Product Block",
     "settings": [],
-    "presets": [{"name": "Default Product Section"}]
+    "presets": [{"name": "Custom Product Section"}]
 }
 {% endschema %} 
