--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -1,10 +1,36 @@
-<div class="row">
-    <div class="col-md-6">h1</div>
+<div class="page-width page-width-desktop ">
+    <div class="row">
+        <div class="col-md-3 col-12">
+            <div class="card mb-3">
+                <img src="https://placehold.co/600x400" class="card-img-top" alt="placeholder" />
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Last updated 3 mins ago</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-{%  schema  %} 
+
+{% schema %}
 {
-    "name": "Product Block",
-    "settings": [],
-    "presets": [{"name": "Custom Product Section"}]
+"name": "Product Block",
+"settings": [],
+"presets": [{"name": "Custom Product Section"}],
+"blocks": [
+    {
+       "name": "Slide",
+       "type": "slide",
+       "settings": [
+         {
+           "type": "image_picker",
+           "id": "image",
+           "label": "Image"
+         }
+       ]
+     }
+]
 }
-{% endschema %} 
+{% endschema %}
