--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -3,8 +3,9 @@
         {% for block in section.blocks %}
             <div class="col-md-3 col-12">
             <div class="card mb-3">
-                {% assign image_url = block.settings.image %}
-                <img src="{{ image_url }}" width="100%" height="auto" class="card-img-top" alt="placeholder" />
+                {% if block.settings.image %}
+                    <img src="{{ block.settings.image }}" width="100%" height="auto" class="card-img-top" alt="placeholder" />
+                {% endif %}
                 <div class="card-img-overlay">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
