add blocks image v2

--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -4,10 +4,10 @@
             <div class="col-md-3 col-12">
             <div class="card mb-3">
                 {% if block.settings.image %}
-                    <img src="{{ block.settings.image }}" width="100%" height="auto" class="card-img-top" alt="placeholder" />
+                    <img src="{{ block.settings.image | img_url: 'master'}}" width="100%" height="auto" class="card-img-top" alt="placeholder" />
                 {% endif %}
                 <div class="card-img-overlay">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Cards title</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.</p>
                     <p class="card-text">Last updated 3 mins ago</p>
@@ -26,8 +26,8 @@
 "presets": [{"name": "Custom Product Section"}],
 "blocks": [
     {
-       "name": "Slide",
-       "type": "slide",
+       "name": "Products",
+       "type": "column",
        "settings": [
          {
            "type": "image_picker",
