--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -1,4 +1,4 @@
-<div class="page-width page-width-desktop ">
+<div class="page-width page-width-desktop custom-product-block">
     <div class="row">
         {% for block in section.blocks %}
             <div class="col-md-3 col-12">
