--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -7,10 +7,8 @@
                     <img src="{{ block.settings.image | img_url: 'master'}}" width="100%" height="auto" class="card-img-top" alt="placeholder" />
                 {% endif %}
                 <div class="card-img-overlay">
-                    <h5 class="card-title">Cards title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text">Last updated 3 mins ago</p>
+                    <h5 class="card-title">{{block.settings.product_title}}</h5>
+                    <a class="btn btn-primary">{{block.settings.product_link}}</a>
                 </div>
             </div>
         </div>
@@ -33,7 +31,18 @@
            "type": "image_picker",
            "id": "image",
            "label": "Image"
-         }
+         },
+         {
+            "type": "text",
+            "id": "product_title",
+            "label": "Product Title"
+          }, 
+          {
+            "type": "url",
+            "id": "product_link",
+            "label": "Link",
+            "info": "Enter the URL for the link"
+          }
        ]
      }
 ]
