name change block

--- a/sections/slider-banner.liquid
+++ b/sections/slider-banner.liquid
@@ -70,7 +70,7 @@
 
 {% schema %}
   {
-    "name": "ttt banner Section",
+    "name": "Slider Banner",
     "settings": [],
     "blocks": [
       {
