--- a/assets/custom-style.css
+++ b/assets/custom-style.css
@@ -1,13 +1,27 @@
 p {
     font-size: 16px;
 }
-.btn.btn-primary {
-    background: #000;
+
+.btn.btn-primary,
+.btn.btn-primary:active,
+.btn.btn-primary:focus,
+.btn.btn-primary:focus-visible {
+    background-color: #000;
     border: none;
     padding: 0.5rem;
     font-size: 1.6rem;
+    border-radius: 0;
+    outline: none;
+    box-shadow: none !important;
+    padding: 0.8rem 2.5rem;
 }
-.custom-product-block .card img{
+
+.btn.btn-primary:hover {
+    background-color: #fff;
+    color: #000;
+}
+
+.custom-product-block .card img {
     width: 100%;
     height: 100%;
     object-fit: cover;
