--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -65,6 +65,9 @@
     opacity: 1;
     transform: translateY(0);
   }
+  .product-block .btn-primary{
+    text-transform: uppercase;
+  }
 </style>
 
 <script>
