--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -7,63 +7,47 @@
       <p class="text-muted">© 2021</p>
     </div>
 
-    <div class="col">
-
-    </div>
-
-    <div class="col">
-      <h5>Section</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-      </ul>
-    </div>
-
-    <div class="col">
-      <h5>Section</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-      </ul>
-    </div>
-
-    <div class="col">
-      <h5>Section</h5>
-      <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-      </ul>
-    </div>
+    {% for block in section.blocks %}
+      <div class="col">
+        <h5>{{ block.settings.title }}</h5>
+        <ul class="nav flex-column">
+          {% for link in block.settings.menu.links %}
+            <li class="nav-item mb-2"><a href="{{ link.url }}" class="nav-link p-0 text-muted">{{ link.title }}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+    {% endfor %}
   </footer>
 </div>
 
-
 {% schema %}
+{
+  "name": "Sixchic Footer",
+  "settings": [],
+  "blocks": [
     {
-      "name": "Sixchic Footer",
-      "settings": [],
-      "blocks": [
+      "type": "menu",
+      "name": "Footer Menu",
+      "settings": [
         {
-          "type": "column",
-          "name": "footer",
-          "settings": [
-          
-          ]
-        }
-      ],
-      "presets": [
+          "type": "text",
+          "id": "title",
+          "label": "Title",
+          "default": "Quick Links"
+        },
         {
-          "name": "Sixchic Footer"
+          "type": "select",
+          "id": "menu",
+          "label": "Menu",
+          "options": "{{ shop.menus }}"
         }
       ]
     }
-  {% endschema %}
+  ],
+  "presets": [
+    {
+      "name": "Sixchic Footer"
+    }
+  ]
+}
+{% endschema %}
