--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -7,16 +7,19 @@
       <p class="text-muted">© 2021</p>
     </div>
 
-    {% for block in section.blocks %}
-      <div class="col">
-        <h5>{{ block.settings.title }}</h5>
-        <ul class="nav flex-column">
-          {% for link in block.settings.menu.links %}
-            <li class="nav-item mb-2"><a href="{{ link.url }}" class="nav-link p-0 text-muted">{{ link.title }}</a></li>
-          {% endfor %}
-        </ul>
-      </div>
-    {% endfor %}
+    <div class="col">
+      {% for block in section.blocks %}
+        {% if block.type == 'menu' %}
+          <nav>
+            <ul>
+              {% for link in block.settings.links %}
+                <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+              {% endfor %}
+            </ul>
+          </nav>
+        {% endif %}
+      {% endfor %}
+    </div>
   </footer>
 </div>
 
@@ -26,20 +29,18 @@
   "settings": [],
   "blocks": [
     {
+      "type": "column",
+      "name": "footer",
+      "settings": []
+    },
+    {
       "type": "menu",
-      "name": "Footer Menu",
+      "name": "Menu",
       "settings": [
         {
-          "type": "text",
-          "id": "title",
-          "label": "Title",
-          "default": "Quick Links"
-        },
-        {
-          "type": "select",
-          "id": "menu",
-          "label": "Menu",
-          "options": "{{ shop.menus }}"
+          "type": "link_list",
+          "id": "links",
+          "label": "Menu Links"
         }
       ]
     }
