--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -14,6 +14,7 @@
               <nav>
                 <ul>
                   {% for link in block.settings.links %}
+                    {{link}}
                     <li><a href="{{ link.url }}">{{ link.title }}</a></li>
                   {% endfor %}
                 </ul>
