--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -8,17 +8,16 @@
     </div>
 
     <div class="col">
-      {% for block in section.blocks %}
-        {% if block.type == 'menu' %}
-          <nav>
-            <ul>
-              {% for link in block.settings.links %}
-                <li><a href="{{ link.url }}">{{ link.title }}</a></li>
-              {% endfor %}
-            </ul>
-          </nav>
-        {% endif %}
-      {% endfor %}
+        {% for block in section.blocks %}  
+            {% case block.type %}
+          
+              {% when 'link' %}  
+                <div class="link" {{ block.shopify_attributes }}>   
+                  {{ block.settings.linktext | link_to: block.settings.linkurl }}
+                </div> 
+          
+            {% endcase %} 
+          {% endfor %}
     </div>
   </footer>
 </div>
@@ -29,16 +28,21 @@
   "settings": [],
   "blocks": [
     {
-      "type": "menu",
-      "name": "Menu",
+      "type": "link",
+      "name": "Link",
       "settings": [
         {
-          "type": "link_list",
-          "id": "links",
-          "label": "Menu Links"
+          "id": "linkurl",
+          "type": "url",
+          "label": "URL link"
+        },
+        {
+          "id": "linktext",
+          "type": "text",
+          "label": "Link text"
         }
       ]
-    }
+    },
   ],
   "presets": [
     {
