--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -8,16 +8,18 @@
     </div>
 
     <div class="col">
-        {% for block in section.blocks %}  
-            {% case block.type %}
-          
-              {% when 'link' %}  
-                <div class="link" {{ block.shopify_attributes }}>   
-                  {{ block.settings.linktext | link_to: block.settings.linkurl }}
-                </div> 
-          
-            {% endcase %} 
-          {% endfor %}
+        {% for block in section.blocks %}
+            {{ section | json }}
+        {% if block.type == 'menu' %}
+          <nav>
+            <ul>
+              {% for link in block.settings.links %}
+                <li><a href="{{ link.url }}">{{ link.title }}</a></li>
+              {% endfor %}
+            </ul>
+          </nav>
+        {% endif %}
+      {% endfor %}
     </div>
   </footer>
 </div>
@@ -28,21 +30,16 @@
   "settings": [],
   "blocks": [
     {
-      "type": "link",
-      "name": "Link",
+      "type": "menu",
+      "name": "Menu",
       "settings": [
         {
-          "id": "linkurl",
-          "type": "url",
-          "label": "URL link"
-        },
-        {
-          "id": "linktext",
-          "type": "text",
-          "label": "Link text"
+          "type": "link_list",
+          "id": "links",
+          "label": "Menu Links"
         }
       ]
-    },
+    }
   ],
   "presets": [
     {
