--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -1,25 +1,30 @@
 <div class="container">
+    
   <footer class="row row-cols-5 py-5 my-5 border-top">
     <div class="col">
       <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        <svg class="bi me-2" width="40" height="32">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
       </a>
       <p class="text-muted">© 2021</p>
     </div>
 
     <div class="col">
-        {% for block in section.blocks %}
-            {{ section | json }}
-        {% if block.type == 'menu' %}
-          <nav>
-            <ul>
-              {% for link in block.settings.links %}
-                <li><a href="{{ link.url }}">{{ link.title }}</a></li>
-              {% endfor %}
+        {%- if block.settings.menu != blank -%}
+            <ul class="footer-block__details-content list-unstyled">
+              {%- for link in block.settings.menu.links -%}
+                <li>
+                  <a
+                    href="{{ link.url }}"
+                    class="link link--text list-menu__item list-menu__item--link{% if link.active %} list-menu__item--active{% endif %}"
+                  >
+                    {{ link.title }}
+                  </a>
+                </li>
+              {%- endfor -%}
             </ul>
-          </nav>
-        {% endif %}
-      {% endfor %}
+          {%- endif -%}
     </div>
   </footer>
 </div>
@@ -35,8 +40,10 @@
       "settings": [
         {
           "type": "link_list",
-          "id": "links",
-          "label": "Menu Links"
+          "id": "menu",
+          "default": "footer",
+          "label": "t:sections.footer.blocks.link_list.settings.menu.label",
+          "info": "t:sections.footer.blocks.link_list.settings.menu.info"
         }
       ]
     }
