done modify footer v1

--- a/sections/custom-footer.liquid
+++ b/sections/custom-footer.liquid
@@ -60,6 +60,7 @@
               assign footer_grid_class = 'grid--3-col-tablet'
             endif
           -%}
+
           <div
             class="footer__blocks-wrapper grid grid--1-col grid--2-col grid--4-col-tablet {{ footer_grid_class }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
             {% if settings.animations_reveal_on_scroll %}
@@ -67,6 +68,16 @@
             {% endif %}
           >
             {%- for block in section.blocks -%}
+              {%- if block.settings.show_social and has_social_icons -%}
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12">
+                      {%- render 'social-icons', class: 'footer__list-social' -%}
+                    </div>
+                  </div>
+                </div>
+              {%- endif -%}
+
               <div
                 class="footer-block grid__item{% if block.type == 'link_list' %} footer-block--menu{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
                 {{ block.shopify_attributes }}
@@ -127,9 +138,6 @@
                       {%- endif -%}
                       {%- if settings.brand_description != blank -%}
                         <div class="rte">{{ settings.brand_description }}</div>
-                      {%- endif -%}
-                      {%- if block.settings.show_social and has_social_icons -%}
-                        {%- render 'social-icons', class: 'footer__list-social' -%}
                       {%- endif -%}
                     </div>
                   {%- when 'image' -%}
