--- a/assets/custom-style.css
+++ b/assets/custom-style.css
@@ -156,3 +156,7 @@ nav.header__inline-menu {
 .list-menu__item {
     font-weight: 600;
 }
+
+a.link.link--text.list-menu__item.list-menu__item--link {
+    font-weight: 400;
+}
