--- a/sections/custom-product-blocks.liquid
+++ b/sections/custom-product-blocks.liquid
@@ -1,4 +1,4 @@
-<div class="container-fluid px-3">
+<div class="custom-product-block container-fluid px-5">
   <div class="row">
     {% for block in section.blocks limit: 4 %}
       <div class="col-md-3 col-12 product-block">
