--- a/assets/custom-style.css
+++ b/assets/custom-style.css
@@ -34,13 +34,14 @@ p {
 }
 
 #homepage-product .btn.btn-primary {
-    font-size: 3.5rem;
+    font-size: 2.9rem;
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
     text-align: center;
-    font-weight: bold;
+    font-weight: 700;
     background: transparent;
+    padding: 0;
 }
 
 .custom-product-block h5.card-title {
