--- a/assets/custom-style.css
+++ b/assets/custom-style.css
@@ -171,7 +171,14 @@ nav.header__inline-menu {
 a.link.link--text.list-menu__item.list-menu__item--link {
     font-weight: 400;
 }
-
+header.header.header--middle-left.header--mobile-center.page-width.header--has-menu.header--has-social.header--has-localizations {
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    margin-left: 7rem;
+    margin-right: 7rem;
+    width: 100%;
+    max-width: -webkit-fill-available;
+}
 @media only screen and (max-width:768px) {
     nav.header__inline-menu {
         display: none;
