--- a/sections/slider-banner.liquid
+++ b/sections/slider-banner.liquid
@@ -33,9 +33,9 @@
                       <h5 class="banner-title">{{ block.settings.slide_title }}</h5>
                       <p class="banner-desc">{{ block.settings.slide_subtext }}</p>
                     </div>
-                    <a href="" class="banner-button">
+                    {% comment %} <a href="" class="banner-button">
                       <button class="btn btn-primary">Shop Now</button>
-                    </a>
+                    </a> {% endcomment %}
                   </div>
                 </div>
               </div>
