--- a/assets/custom-style.css
+++ b/assets/custom-style.css
@@ -40,8 +40,9 @@ p {
     text-transform: uppercase;
     text-align: center;
     font-weight: 700;
-    background: transparent;
+    background: #000000b0;
     padding: 0;
+    border-radius: 5px;
 }
 
 .custom-product-block h5.card-title {
