v3new brach create cahnges

--- a/assets/custom-style.css
+++ b/assets/custom-style.css
@@ -97,6 +97,10 @@ p {
     letter-spacing: 0.2rem;
 }
 
+.product__description.rte.quick-add-hidden {
+    font-size: 1.7rem;
+}
+
 /* .card.card--standard.card--media::before {
     position: relative;
     content: '';
